// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberActions Should match snapshot with data 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c2:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c2:hover:enabled {
  border-color: #fff;
}

.c2:active:enabled {
  border: 1px solid #303338;
}

.c3 svg,
.c3 img {
  margin-right: .4rem;
}

.c3,
.c3 button {
  padding: .25rem 0.6rem;
  background-color: #1B1D1F;
}

.c6 {
  height: 1.6rem;
  width: 1.6rem;
}

.c7 {
  border-radius: 50%;
  height: 18px;
  width: 18px;
}

.c4 {
  border-radius: 50px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-weight: 600;
}

.c4 > div:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 img {
  border-radius: 50%;
  margin-right: 0;
}

.c8 {
  background-color: #282B30;
  color: #fff;
  border-radius: 32px;
  padding: 2px 8px;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c10 {
  display: none;
  border: 1px solid #303338;
  border-radius: 10px;
  padding-top: 0.25rem;
  position: absolute;
  background-color: #26282D;
  z-index: 9999;
  width: 100%;
  min-width: 200px;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 .c9 {
  left: 0;
  right: auto;
}

.c11 {
  padding: 20px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  padding-bottom: 8px;
}

.c13 {
  margin-top: 12px;
  width: 100%;
}

@media only screen and (min-width:768px) {
  .c5 {
    margin-right: 0.3rem;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    height: 100vh;
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: none;
    border: none;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="member-actions-button"
  >
    <button
      class="c2 c3 c4"
    >
      <div>
        <span
          class="c5"
        >
          <img
            alt="Avatar"
            class="c6 c7"
            data-testid="avatar"
            size="18"
            src="/assets/favicon-32x32.png"
          />
        </span>
        <span>
          test.eth
        </span>
      </div>
      <div
        class="c8"
      >
        50%
      </div>
    </button>
    <div
      class="c9 c0 c10"
    >
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          votingPower
           
          <span>
            50%
          </span>
        </div>
        <div
          class="c12"
        >
          locked
           
          <span>
            0 GT
          </span>
        </div>
        <div
          class="c12"
        >
          unlockedIn
           
          <span>
            a day
          </span>
        </div>
        <button
          class="c2 c13"
          data-testid="increase-voting-power-btn"
        >
          increaseVotingPower
        </button>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`MemberActions Should match snapshot without data 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c2:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c2:hover:enabled {
  border-color: #fff;
}

.c2:active:enabled {
  border: 1px solid #303338;
}

.c3 svg,
.c3 img {
  margin-right: .4rem;
}

.c3,
.c3 button {
  padding: .25rem 0.6rem;
  background-color: #1B1D1F;
}

.c4 {
  border-radius: 50px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-weight: 600;
}

.c4 > div:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 img {
  border-radius: 50%;
  margin-right: 0;
}

.c6 {
  background-color: #282B30;
  color: #fff;
  border-radius: 32px;
  padding: 2px 8px;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c8 {
  display: none;
  border: 1px solid #303338;
  border-radius: 10px;
  padding-top: 0.25rem;
  position: absolute;
  background-color: #26282D;
  z-index: 9999;
  width: 100%;
  min-width: 200px;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 .c7 {
  left: 0;
  right: auto;
}

.c9 {
  padding: 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  padding-bottom: 8px;
}

.c11 {
  margin-top: 12px;
  width: 100%;
}

@media only screen and (min-width:768px) {
  .c5 {
    margin-right: 0.3rem;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    height: 100vh;
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: none;
    border: none;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="member-actions-button"
  >
    <button
      class="c2 c3 c4"
    >
      <div>
        <span
          class="c5"
        >
          <div
            class=""
          >
            <span
              aria-busy="true"
              aria-live="polite"
            >
              <span
                class="react-loading-skeleton"
                style="width: 18px; height: 18px; border-radius: 50%; --base-color: #333; --highlight-color: #555;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
        <span>
          <div
            class=""
          >
            <span
              aria-busy="true"
              aria-live="polite"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
      <div
        class="c6"
      >
        <div
          class=""
        >
          <span
            aria-busy="true"
            aria-live="polite"
          >
            <span
              class="react-loading-skeleton"
              style="width: 40px; --base-color: #333; --highlight-color: #555;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </div>
    </button>
    <div
      class="c7 c0 c8"
    >
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          votingPower
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c10"
        >
          locked
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c10"
        >
          unlockedIn
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <button
          class="c2 c11"
          data-testid="increase-voting-power-btn"
        >
          increaseVotingPower
        </button>
      </div>
    </div>
  </div>
   
</div>
`;
